--- a/public/html/assignments.html
+++ b/public/html/assignments.html
@@ -25,8 +25,8 @@
 <!-- ############ Nav Bar ############ -->
 <div class="container">
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-            <h1>My Grade Book</h1>
+        <a class="navbar-brand" href="/teacher">
+            <h1 class="display-4">My Grade Book</h1>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,20 +34,17 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav ml-2">
                 <li class="nav-item mr-2" id="allStudents">
-                    <a href="/teacher" class="nav-link">My Students</a>
-                </li>
-
-                <li class="nav-item mr-2" id="addNewAssign">
-                    <a href="/assignments" class="nav-link">Add New Assignment</a>
+                    <a href="/teacher" class="nav-link">Home</a>
                 </li>
                 <li>
-                    <a href="/student" class="nav-link">One Student</a>
+                    <a href="/student" class="nav-link">My Students</a>
                 </li>
-
+                <li class="nav-item mr-2" id="addNewAssign">
+                    <a href="/assignments" class="nav-link">Assignments</a>
+                </li>
                 <li class="nav-item mr-2" id="navLogout">
                     <a class="nav-link">Log out</a>
                 </li>
-
                 <li class="nav-item mr-2 my-auto">
                     <p class="nav-link text-primary">Welcome Back <span id="user-name">USER</span></p>
                 </li>
@@ -59,7 +56,7 @@
     </nav>
 
     <body>
-        <div class="jumbotron m-1">
+        <div class="jumbotron m-1 rounded-0">
             <h1 class="display-4">Adding New Assignment</h1>
             <form>
                 <div class="container">
@@ -98,7 +95,7 @@
                 </div>
             </form>
         </div>
-        <div class="jumbotron m-1">
+        <div class="jumbotron m-1 rounded-0">
             <h1 class="display-4">Assignments</h1>
 
             <div class="container" id="display-assignments">
