--- a/public/html/individualStudent.html
+++ b/public/html/individualStudent.html
@@ -24,101 +24,99 @@
     <title>My Grade Book</title>
 </head>
 <!-- ############ Nav Bar ############ -->
-<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
-        <h1>My Grade Book</h1>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    </button>
-    <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav ml-2">
-            <li class="nav-item mr-2" id="allStudents">
-                <a href="/teacher" class="nav-link">My Students</a>
-            </li>
+<div class="container">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/teacher">
+            <h1 class="display-4">My Grade Book</h1>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav ml-2">
+                <li class="nav-item mr-2" id="allStudents">
+                    <a href="/teacher" class="nav-link">Home</a>
+                </li>
+                <li>
+                    <a href="/student" class="nav-link">My Students</a>
+                </li>
+                <li class="nav-item mr-2" id="addNewAssign">
+                    <a href="/assignments" class="nav-link">Assignments</a>
+                </li>
+                <li class="nav-item mr-2" id="navLogout">
+                    <a class="nav-link">Log out</a>
+                </li>
+                <li class="nav-item mr-2 my-auto">
+                    <p class="nav-link text-primary">Welcome Back <span id="user-name">USER</span></p>
+                </li>
+            </ul>
+            <span class="ml-auto navbar-text">
+                <h3></h3>
+            </span>
+        </div>
+    </nav>
 
-            <li class="nav-item mr-2" id="addNewAssign">
-                <a href="/assignments" class="nav-link">Add New Assignment</a>
-            </li>
-            <li>
-                <a href="/student" class="nav-link">One Student</a>
-            </li>
+    <body>
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalHeader"></h5>
+                        <small id="assignmentNameModal"></small>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="newGrade">Grade</label>
+                                <input type="number" class="form-control" id="newGrade">
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" id="newGradeButton">Save changes</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-            <li class="nav-item mr-2" id="navLogout">
-                <a class="nav-link">Log out</a>
-            </li>
-
-            <li class="nav-item mr-2 my-auto">
-                <p class="nav-link text-primary">Welcome Back <span id="user-name">USER</span></p>
-            </li>
-        </ul>
-        <span class="ml-auto navbar-text">
-            <h3></h3>
-        </span>
-    </div>
-</nav>
-
-<body>
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="modalHeader"></h5>
-                    <small id="assignmentNameModal"></small>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
+        <div class="container mt-3">
+            <div class="d-flex m-3">
+                <div class="dropdown mr-1">
+                    <button type="button" class="btn btn-secondary dropdown-toggle" id="studentDropDown"
+                        data-toggle="dropdown" data-offset="10,20">
+                        Students
                     </button>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="form-group">
-                            <label for="newGrade">Grade</label>
-                            <input type="number" class="form-control" id="newGrade">
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" id="newGradeButton">Save changes</button>
+                    <div class="dropdown-menu" id="individualStudentChoices" aria-labelledby="dropdownMenuOffset">
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <div class="container mt-3">
-        <div class="d-flex m-3">
-            <div class="dropdown mr-1">
-                <button type="button" class="btn btn-secondary dropdown-toggle" id="studentDropDown"
-                    data-toggle="dropdown" data-offset="10,20">
-                    Students
-                </button>
-                <div class="dropdown-menu" id="individualStudentChoices" aria-labelledby="dropdownMenuOffset">
-                </div>
-            </div>
-        </div>
-        <div>
             <div>
-                <h2 class="text-center" >
-                    Grades for <span id="studentNameDisplay">...</span>
-                </h2>
+                <div>
+                    <h2 class="text-center">
+                        Grades for <span id="studentNameDisplay">...</span>
+                    </h2>
+                </div>
+                <table class="table text-center">
+                    <thead>
+                        <tr>
+                            <th scope="col">Assignment Name</th>
+                            <th scope="col">Grade</th>
+                        </tr>
+                    </thead>
+                    <tbody id="studentTable">
+                    </tbody>
+                </table>
             </div>
-            <table class="table text-center">
-                <thead>
-                    <tr>
-                        <th scope="col">Assignment Name</th>
-                        <th scope="col">Grade</th>
-                    </tr>
-                </thead>
-                <tbody id="studentTable">
-                </tbody>
-            </table>
         </div>
-    </div>
+</div>
 
-
-    <script type="text/javascript" src="../js/firebaseTeacher.js"></script>
-    <script type="text/javascript" src="../js/individualStudent.js"></script>
+<script type="text/javascript" src="../js/firebaseTeacher.js"></script>
+<script type="text/javascript" src="../js/individualStudent.js"></script>
 
 </body>
 
