--- a/public/html/teachLanding.html
+++ b/public/html/teachLanding.html
@@ -29,63 +29,62 @@
 
 </head>
 <!-- ############ Nav Bar ############ -->
-<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">
-    <h1>My Grade Book</h1>
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-  </button>
-  <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav ml-2">
-      <li class="nav-item mr-2" id="allStudents">
-        <a href="/teacher" class="nav-link">My Students</a>
-      </li>
+<div class="container">
+  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/teacher">
+      <h1 class="display-4">My Grade Book</h1>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+      aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav ml-2">
+        <li class="nav-item mr-2" id="allStudents">
+          <a href="/teacher" class="nav-link">Home</a>
+        </li>
+        <li>
+          <a href="/student" class="nav-link">My Students</a>
+        </li>
+        <li class="nav-item mr-2" id="addNewAssign">
+          <a href="/assignments" class="nav-link">Assignments</a>
+        </li>
+        <li class="nav-item mr-2" id="navLogout">
+          <a class="nav-link">Log out</a>
+        </li>
+        <li class="nav-item mr-2 my-auto">
+          <p class="nav-link text-primary">Welcome Back <span id="user-name">USER</span></p>
+        </li>
+      </ul>
+      <span class="ml-auto navbar-text">
+        <h3></h3>
+      </span>
+    </div>
+  </nav>
 
-      <li class="nav-item mr-2" id="addNewAssign">
-        <a href="/assignments" class="nav-link">Add New Assignment</a>
-      </li>
-      <li>
-        <a href="/student" class="nav-link">One Student</a>
-      </li>
-
-      <li class="nav-item mr-2" id="navLogout">
-        <a class="nav-link">Log out</a>
-      </li>
-
-      <li class="nav-item mr-2 my-auto">
-        <p class="nav-link text-primary">Welcome Back <span id="user-name">USER</span></p>
-      </li>
-    </ul>
-    <span class="ml-auto navbar-text">
-      <h3></h3>
-    </span>
-  </div>
-</nav>
-
-<body>
-  <div class="container mx-auto my-0" style="width: 90%;">
-    <div class="row">
-      <div class="col-5">
-        <div class="container">
-          <table class="table table-sm table-hover table-striped table-borderless table-hover text-center">
-            <thead>
-              <th scope="col">#</th>
-              <th scope="col">Name</th>
-              <th scope="col">Overall Grade</th>
-              <th scope="col">Student Page</th>
-            </thead>
-            <tbody id="display-students">
-            </tbody>
-          </table>
+  <body>
+    <div class="m-1" style="width: 90%;">
+      <div class="row">
+        <div class="col-5">
+          <div class="container">
+            <table class="table table-sm table-hover table-striped table-borderless table-hover text-center">
+              <thead>
+                <th scope="col">ID</th>
+                <th scope="col">Name</th>
+                <th scope="col">Overall Grade</th>
+                <th scope="col">Student Page</th>
+              </thead>
+              <tbody id="display-students">
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <div class="col-7">
+          <canvas id="myChart"></canvas>
         </div>
       </div>
-      <div class="col-7">
-        <canvas id="myChart"></canvas>
-      </div>
     </div>
-  </div>
-  <script type="text/javascript" src="../js/firebaseteacher.js"></script>
+</div>
+<script type="text/javascript" src="../js/firebaseteacher.js"></script>
 </body>
 
 </html>
