--- a/public/html/teachLanding.html
+++ b/public/html/teachLanding.html
@@ -20,7 +20,7 @@
   <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-auth.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <link rel="stylesheet" href="../styles/styles.css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="../styles/teacherLand.css" media="screen" title="no title" charset="utf-8">
   <title>My Grade Book</title>
 </head>
 <!-- ############ Nav Bar ############ -->
