--- a/public/html/teachLanding.html
+++ b/public/html/teachLanding.html
@@ -80,6 +80,7 @@
     </div>
   </div>
   <script type="text/javascript" src="../js/firebaseTeacher.js"></script>
+  <script type="text/javascript" src="../js/teacherLanding.js"></script>
 </body>
 
 </html>
