--- a/public/html/teacherLogIn.html
+++ b/public/html/teacherLogIn.html
@@ -106,17 +106,18 @@
                     <div class="row">
                         <div class="col-sm-3"></div>
                         <div class="col-sm-6">
-                            <button type="submit" id="register" class="btn btn-primary submit"><a
-                                    href="#">Register</a></button>
+                            <button type="submit" class="btn btn-primary submit"><a
+                                    href="/teacher">Register</a></button>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-2"></div>
-                        <div class="col-sm">
-                            <h1>Please log in once you Register</h1>
-                        </div>
-                        <div class="col-sm-2"></div>
+                </form>
+                <div class="row">
+                    <div class="col-sm-2"></div>
+                    <div class="col-sm">
+                        <h1>Please log in once you Register</h1>
                     </div>
+                    <div class="col-sm-2"></div>
+                </div>
                 </form>
             </div>
         </div>
@@ -145,7 +146,7 @@
                     <div class="row">
                         <div class="col-sm-3"></div>
                         <div class="col-sm-6">
-                            <button type="submit" class="btn btn-primary submit"><a href="#">Log In</a></button>
+                            <button type="submit" class="btn btn-primary submit"><a href="/teacher">Log In</a></button>
                         </div>
                     </div>
                     <div class="col-sm-3"></div>
