--- a/public/html/teachLanding.html
+++ b/public/html/teachLanding.html
@@ -16,7 +16,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-auth.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
@@ -55,30 +55,32 @@
   </nav>
 
   <body>
-    <div class="m-1" style="width: 90%;">
-      <div class="row">
-        <div class="col-5">
-          <div class="container">
-            <table class="table table-sm table-hover table-striped table-borderless table-hover text-center">
-              <thead>
-                <th scope="col">ID</th>
-                <th scope="col">Name</th>
-                <th scope="col">Overall Grade</th>
-                <th scope="col">Student Page</th>
-              </thead>
-              <tbody id="display-students">
-              </tbody>
-            </table>
+    <div class="jumbotron m-1 rounded-0">
+      <div class="m-1" style="width: 90%;">
+        <div class="row">
+          <div class="col-5">
+            <div class="container">
+              <table class="table table-sm table-hover table-striped table-borderless table-hover text-center">
+                <thead>
+                  <th scope="col">ID</th>
+                  <th scope="col">Name</th>
+                  <th scope="col">Overall Grade</th>
+                  <th scope="col">Student Page</th>
+                </thead>
+                <tbody id="display-students">
+                </tbody>
+              </table>
+            </div>
           </div>
-        </div>
-        <div class="col-7">
-          <canvas id="myChart"></canvas>
+          <div class="col-7">
+            <canvas id="myChart"></canvas>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <script type="text/javascript" src="../js/firebaseTeacher.js"></script>
-  <script type="text/javascript" src="../js/teacherLanding.js"></script>
+</div>
+<script type="text/javascript" src="../js/firebaseTeacher.js"></script>
+<script type="text/javascript" src="../js/teacherLanding.js"></script>
 </body>
 
 </html>
