--- a/public/html/assignments.html
+++ b/public/html/assignments.html
@@ -54,7 +54,7 @@
     </nav>
 
     <body>
-        <div class="jumbotron m-1 rounded-0">
+        <div class="jumbotron p-1 my-1 rounded-0">
             <h1 class="display-4">Adding New Assignment</h1>
             <form>
                 <div class="container">
