--- a/public/html/individualStudent.html
+++ b/public/html/individualStudent.html
@@ -81,7 +81,7 @@
                     </div>
                 </div>
             </div>
-            <div class="jumbotron m-1 rounded-0">
+            <div class="jumbotron p-1 my-1 rounded-0">
                 <div class="container mt-3">
                     <div class="d-flex m-3">
                         <div class="dropdown mr-1">
