--- a/public/html/teacherLogIn.html
+++ b/public/html/teacherLogIn.html
@@ -113,7 +113,7 @@
                 </form>
             </div>
         </div>
-        <div class="jumbotron jumbotron2 jumbotron-fluid" id="loginDiv">
+        <div class="jumbotron jumbotron2 p-1 my-1 jumbotron-fluid" id="loginDiv">
             <div class="container">
                 <form id="login">
                     <div class="row">
