--- a/public/html/gradeAssign.html
+++ b/public/html/gradeAssign.html
@@ -54,7 +54,7 @@
     </nav>
 
     <body>
-        <div class="jumbotron m-1 rounded-0 p-2 bg-transparent">
+        <div class="jumbotron m-1 rounded-0 p-1 my-1 bg-transparent">
             <h3 class="lead" id="assignmentName"></h3>
             <div id="display-assignments">
                 <table class="table table-sm table-hover my-auto table-striped table-borderless table-hover">
