--- a/public/html/teachLanding.html
+++ b/public/html/teachLanding.html
@@ -55,7 +55,7 @@
   </nav>
 
   <body>
-    <div class="jumbotron m-1 rounded-0">
+    <div class="jumbotron p-1 my-1 rounded-0">
       <div class="m-1" style="width: 90%;">
         <div class="row">
           <div class="col-5">
