--- a/public/html/teacherLogIn.html
+++ b/public/html/teacherLogIn.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
         </div>
-        <div class="jumbotron jumbotron1 jumbotron-fluid" id="registerDiv">
+        <div class="jumbotron jumbotron1 p-1 my-1 jumbotron-fluid" id="registerDiv">
             <div class="container">
                 <form id="register">
                     <div class="row">
