--- a/public/html/individualStudent.html
+++ b/public/html/individualStudent.html
@@ -54,7 +54,7 @@
     </nav>
 
     <body>
-        <div class="jumbotron m-1 rounded-0">
+        <div class="jumbotron p-1 my-1 rounded-0">
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog" role="document">
