--- a/public/html/teacherLogIn.html
+++ b/public/html/teacherLogIn.html
@@ -137,7 +137,7 @@
                     <div class="row">
                         <div class="col-sm-3"></div>
                         <div class="col-sm-6">
-                            <button type="submit" class="btn btn-primary submit"><a href="#">Log In</a></button>
+                            <button type="submit" class="btn btn-primary submit"><a href="/teacher">Log In</a></button>
                         </div>
                     </div>
                     <div class="col-sm-3"></div>
